preventing wrapping on about items because it wraps strangely

--- a/src/components/aboutItem/about-item.scss
+++ b/src/components/aboutItem/about-item.scss
@@ -54,4 +54,5 @@
 
 .about-item__cta {
   @include primary-cta;
+  white-space: nowrap;
 }
